--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/playwodi/playwodi",
     "pages/dipai/dipai",
-    "pages/gamemain/gamemain"
+    "pages/gamemain/gamemain",
+    "pages/playwodi/shuoming"
   ],
   "window": {
     "backgroundTextStyle": "light",
